<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activities.attendance.AttendanceListActivity"
    tools:showIn="@layout/activity_attendance_list">

    <LinearLayout
        android:id="@+id/filter_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">
        <!-- Filter Bar -->
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/color_primary">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Filter"
                android:textColor="#fff"
                android:textSize="16dp" />
        </LinearLayout>
        <!-- /Filter Bar -->

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spClassSections"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown"
            app:smsp_floatingLabelText="@string/label_class_section"
            app:smsp_floatingLabelColor="@color/color_primary"
            app:smsp_floatingLabelSize="12dp"
            app:smsp_hint="@string/label_class_section"
            app:smsp_arrowColor="@color/color_primary"
            app:smsp_searchHeaderBackgroundColor="#ffff"
            app:smsp_isSearchable="false"
            app:smsp_hintColor="#FF6C6C6C"
            app:smsp_itemColor="@color/color_info"
            app:smsp_itemListColor="#FF6C6C6C"
            app:smsp_itemListHintBackgroundColor="@color/colorPrimary"
            app:smsp_itemListHintColor="#FFFFFF"
            app:smsp_itemSize="16dp"
            app:smsp_multilineError="false"
            app:smsp_underlineColor="@color/color_primary"
            app:smsp_selectedItemListColor="@color/color_info" />
        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spSubjects"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:spinnerMode="dropdown"
            app:smsp_floatingLabelText="@string/label_subject"
            app:smsp_floatingLabelColor="@color/color_primary"
            app:smsp_floatingLabelSize="12dp"
            app:smsp_hint="@string/label_subject"
            app:smsp_arrowColor="@color/color_primary"
            app:smsp_isSearchable="false"
            app:smsp_hintColor="#FF6C6C6C"
            app:smsp_itemColor="@color/color_info"
            app:smsp_itemListColor="#FF6C6C6C"
            app:smsp_itemListHintBackgroundColor="@color/color_primary"
            app:smsp_itemListHintColor="#FFFFFF"
            app:smsp_itemSize="15dp"
            app:smsp_multilineError="false"
            app:smsp_underlineColor="@color/color_primary"
            app:smsp_selectedItemListColor="@color/color_info" />
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:theme="@style/TextLabel">

                <EditText
                    android:id="@+id/etDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textIsSelectable="true"
                    android:hint="Date"
                    android:inputType="date"
                    android:textColor="#0035e9" />
            </android.support.design.widget.TextInputLayout>

        <info.hoang8f.widget.FButton
            android:id="@+id/btnGenerate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@drawable/ic_refresh_w_24dp"
            android:layout_gravity="right|top"
            android:minHeight="@dimen/demo_button_min_height"
            android:minWidth="@dimen/demo_button_min_width"
            android:text="@string/label_generate"
            android:textColor="@android:color/white"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            app:fButtonColor="@color/color_primary"
            app:shadowEnabled="false" />

        <!-- Result Bar -->
        <LinearLayout
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:background="@color/color_warning">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Results"
                android:textColor="#fff"
                android:textSize="16dp" />
        </LinearLayout>

        <!-- A RecyclerView with some commonly used attributes -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:scrollbars="vertical" />
    </LinearLayout>
</android.support.v4.widget.NestedScrollView>