<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.attendance.PerfectAttendanceActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/color_primary"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Filter"
                android:textColor="#fff"
                android:textSize="16dp" />
        </LinearLayout>

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spSchoolYear"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="14dp"
            android:paddingStart="10dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout"
            app:smsp_arrowColor="@color/color_primary"
            app:smsp_floatingLabelColor="@color/color_primary"
            app:smsp_floatingLabelSize="12dp"
            app:smsp_floatingLabelText="@string/label_school_year"
            app:smsp_hint="@string/label_school_year"
            app:smsp_hintColor="#FF6C6C6C"
            app:smsp_hintSize="12dp"
            app:smsp_isSearchable="false"
            app:smsp_itemColor="@color/color_info"
            app:smsp_itemListColor="#FF6C6C6C"
            app:smsp_itemListHintBackgroundColor="@color/color_primary"
            app:smsp_itemListHintColor="#FFFFFF"
            app:smsp_itemSize="16dp"
            app:smsp_multilineError="false"
            app:smsp_selectedItemListColor="@color/color_info"
            app:smsp_underlineColor="@color/color_primary"
            app:smsp_underlineSize="0.3dp" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spGradingPeriod"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="14dp"
            android:paddingStart="10dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spSchoolYear"
            app:smsp_arrowColor="@color/color_primary"
            app:smsp_floatingLabelColor="@color/color_primary"
            app:smsp_floatingLabelSize="12dp"
            app:smsp_floatingLabelText="@string/label_grading_period"
            app:smsp_hint="@string/label_grading_period"
            app:smsp_hintColor="#FF6C6C6C"
            app:smsp_hintSize="12dp"
            app:smsp_isSearchable="false"
            app:smsp_itemColor="@color/color_info"
            app:smsp_itemListColor="#FF6C6C6C"
            app:smsp_itemListHintBackgroundColor="@color/color_primary"
            app:smsp_itemListHintColor="#FFFFFF"
            app:smsp_itemSize="16dp"
            app:smsp_multilineError="false"
            app:smsp_selectedItemListColor="@color/color_info"
            app:smsp_underlineColor="@color/color_primary"
            app:smsp_underlineSize="0.3dp" />

        <com.chivorn.smartmaterialspinner.SmartMaterialSpinner
            android:id="@+id/spClassSection"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginStart="12dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="14dp"
            android:paddingStart="10dp"
            android:spinnerMode="dropdown"
            app:layout_constraintEnd_toEndOf="parent"

            app:layout_constraintHorizontal_bias="0.0"

            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spGradingPeriod"
            app:smsp_arrowColor="@color/color_primary"
            app:smsp_floatingLabelColor="@color/color_primary"
            app:smsp_floatingLabelSize="12dp"
            app:smsp_floatingLabelText="@string/label_class_section"
            app:smsp_hint="@string/label_class_section"
            app:smsp_hintColor="#FF6C6C6C"
            app:smsp_hintSize="12dp"
            app:smsp_isSearchable="false"
            app:smsp_itemColor="@color/color_info"
            app:smsp_itemListColor="#FF6C6C6C"
            app:smsp_itemListHintBackgroundColor="@color/color_primary"
            app:smsp_itemListHintColor="#FFFFFF"
            app:smsp_itemSize="16dp"
            app:smsp_multilineError="false"
            app:smsp_selectedItemListColor="@color/color_info"
            app:smsp_underlineColor="@color/color_primary"
            app:smsp_underlineSize="0.3dp" />

        <!-- Result Bar -->
        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="3dp"
            android:background="@color/color_warning"
            android:padding="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/spClassSection">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="Results"
                android:textColor="#fff"
                android:textSize="16dp" />
        </LinearLayout>
        <!-- A RecyclerView with some commonly used attributes -->
        <android.support.v7.widget.RecyclerView
            android:id="@+id/my_recycler_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="3dp"
            android:layout_marginEnd="8dp"
            android:scrollbars="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.518"
            app:layout_constraintStart_toStartOf="@+id/linearLayout2"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </android.support.constraint.ConstraintLayout>

</ScrollView>